# minesweeper

./: Cargo.toml  README.md
src/: board.rs  main.rs  opts.rs  solver.rs  util.rs
src/solver/: algo.rs  region.rs
src/solver/algo/: cc.rs  csp0.rs  csp1.rs
testing/boards/: basic.txt
