[package]
name = "minesweeper"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.7.3"

[dependencies.rand_xoshiro]
version = "0.4.0"

[dependencies.termion]
version = "1.5.5"

[dependencies.serde]
version = "1.0.114"

[dependencies.structopt]
version = "0.3.15"

[dependencies.itertools]
version = "0.9.0"
